--- a/templates/base.html
+++ b/templates/base.html
@@ -1,10 +1,13 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
 </head>
+
 <body>
-{% block content %}{% endblock %}
+    {% block content %}{% endblock %} {% block scripts %}{% endblock %}
 </body>
+
 </html>
