--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -20,6 +20,7 @@
     </form>
     <div id="usersCount">
     </div>
+    <button onclick="localStorage.removeItem('usersCount')">Reset</button>
     <script>
         document.getElementById("usersCount").innerText = localStorage.getItem('usersCount')
     </script>
